# minerva

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  annotated.html  annotated_dup.js  class_image_buffer.html  class_parameter.html  class_program.html  class_uniform.html  classes.html  classminerva_1_1_buffer-members.html  classminerva_1_1_buffer.html  classminerva_1_1_buffer.js  classminerva_1_1_buffer__inherit__graph.map  classminerva_1_1_buffer__inherit__graph.md5  classminerva_1_1_buffer_imp-members.html  classminerva_1_1_buffer_imp.html  classminerva_1_1_buffer_imp.js  classminerva_1_1_buffer_imp__inherit__graph.map  classminerva_1_1_buffer_imp__inherit__graph.md5  classminerva_1_1_image-members.html  classminerva_1_1_image.html  classminerva_1_1_image.js  classminerva_1_1_image_buffer-members.html  classminerva_1_1_image_buffer.html  classminerva_1_1_image_buffer.js  classminerva_1_1_image_buffer__inherit__graph.map  classminerva_1_1_image_buffer__inherit__graph.md5  classminerva_1_1_parameter-members.html  classminerva_1_1_parameter.html  classminerva_1_1_parameter.js  classminerva_1_1_program-members.html  classminerva_1_1_program.html  classminerva_1_1_program.js  classminerva_1_1_sequence_builder-members.html  classminerva_1_1_sequence_builder.html  classminerva_1_1_sequence_builder.js  classminerva_1_1_tensor-members.html  (+395 more)
docs/: CMakeLists.txt  Doxyfile.in
docs/pages/: mainpage.md  memory.md  quickstart.md
examples/: CMakeLists.txt  README.md
examples/add/: CMakeLists.txt  add.comp  add.cpp  add.spv
examples/copy/: CMakeLists.txt  copy.cpp
examples/imageprocessing/: CMakeLists.txt  imageprocessing.comp  imageprocessing.cpp  imageprocessing.spv
examples/mandelbrot/: CMakeLists.txt  mandelbrot.comp  mandelbrot.cpp  mandelbrot.spv
examples/uniform/: CMakeLists.txt  uniform.comp  uniform.cpp  uniform.spv
include/minerva/: Buffer.hpp  Copy.hpp  Device.hpp  Handles.hpp  Image.hpp  ImageBuffer.hpp  ImageFormat.hpp  Instance.hpp  Program.hpp  Sequence.hpp  Tensor.hpp  Timeline.hpp  Uniform.hpp  config.hpp  minerva.hpp  span.hpp  version.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+21 more)
src/: Buffer.cpp  CMakeLists.txt  Copy.cpp  Device.cpp  Image.cpp  ImageBuffer.cpp  Instance.cpp  Program.cpp  Sequence.cpp  Tensor.cpp  Timeline.cpp  Uniform.cpp  array.hpp  version.cpp
src/vk/: Buffer.cpp  Buffer.hpp  Command.cpp  Command.hpp  Context.cpp  Context.hpp  Image.cpp  Image.hpp  Instance.cpp  Instance.hpp  Settings.hpp  Structs.hpp  Timeline.cpp  Timeline.hpp  result.hpp
tools/: CMakeLists.txt
tools/deviceinfo/: CMakeLists.txt  deviceinfo.cpp
